--- a/frontend/whitepaper/paper.html
+++ b/frontend/whitepaper/paper.html
@@ -30,7 +30,7 @@
         }
     </script>
     
-    <link href="styles.css" rel="stylesheet">
+    <link href="paper.css" rel="stylesheet">
 </head>
 <body class="bg-background-light dark:bg-background-dark font-display text-gray-800 dark:text-gray-200">
     <div class="flex flex-col min-h-screen">
@@ -46,12 +46,11 @@
                     </div>
                     <div class="flex items-center gap-6">
                         <nav class="hidden md:flex items-center gap-6 text-sm font-medium">
-                            <a class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors" href="index.html">Home</a>
-                            <a class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors" href="price.html">Price</a>
-                            <a class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors" href="contact-us.html">Contact Us</a>
-                            <a class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors font-bold text-primary" href="#">Whitepaper</a>
+                            <a class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors" href="/frontend/index/index.html">Home</a>
+                            <a class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors" href="/frontend/pricing/price.html">Price</a>
+                            <a class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors" href="/frontend/contact/us.html">Contact Us</a>
+                            <a class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors font-bold text-primary" href="/frontend/whitepaper/paper.html">Whitepaper</a>
                         </nav>
-                        <button class="bg-primary text-white text-sm font-bold leading-normal tracking-wide rounded-lg h-10 px-6 hover:bg-primary/90 transition-colors"><span>Login</span></button>
                     </div>
                 </div>
             </div>
@@ -206,24 +205,24 @@
                     <div>
                         <h3 class="text-sm font-semibold text-gray-900 dark:text-white tracking-wider uppercase">Company</h3>
                         <ul class="mt-4 space-y-4">
-                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">About Us</a></li>
-                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="contact-us.html">Contact Us</a></li>
+                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="/frontend/whitepaper/paper.html">About Us</a></li>
+                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="/frontend/contact/us.html">Contact Us</a></li>
                             <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Careers</a></li>
                         </ul>
                     </div>
                     <div>
                         <h3 class="text-sm font-semibold text-gray-900 dark:text-white tracking-wider uppercase">Community</h3>
                         <ul class="mt-4 space-y-4">
-                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">API Documentation</a></li>
-                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Knowledge Base</a></li>
-                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Network Status</a></li>
+                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Discord</a></li>
+                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Facebook</a></li>
+                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Telegram</a></li>
                         </ul>
                     </div>
                     <div>
                         <h3 class="text-sm font-semibold text-gray-900 dark:text-white tracking-wider uppercase">Products &amp; Services</h3>
                         <ul class="mt-4 space-y-4">
                             <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Advertise</a></li>
-                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Explorer-as-a-aService</a></li>
+                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Adruino</a></li>
                             <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Developer APIs</a></li>
                         </ul>
                     </div>
