--- a/frontend/index/index.html
+++ b/frontend/index/index.html
@@ -61,9 +61,8 @@
                             <a class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors" href="/frontend/index/index.html">Home</a>
                             <a class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors" href="/frontend/pricing/price.html">Price</a>
                             <a class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors" href="/frontend/contact/us.html">Contact Us</a>
-                            <a class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors" href="#">Our Selves</a>
+                            <a class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors" href="/frontend/whitepaper/paper.html">WhitePaper</a>
                         </nav>
-                        <button class="bg-primary text-white text-sm font-bold leading-normal tracking-wide rounded-lg h-10 px-6 hover:bg-primary/90 transition-colors"><span>Login</span></button>
                     </div>
                 </div>
             </div>
@@ -293,30 +292,30 @@
                     <div>
                         <h3 class="text-sm font-semibold text-gray-900 dark:text-white tracking-wider uppercase">Company</h3>
                         <ul class="mt-4 space-y-4">
-                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">About Us</a></li>
-                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Contact Us</a></li>
+                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="/frontend/whitepaper/paper.html">About Us</a></li>
+                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="/frontend/contact/us.html">Contact Us</a></li>
                             <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Careers</a></li>
                         </ul>
                     </div>
                     <div>
                         <h3 class="text-sm font-semibold text-gray-900 dark:text-white tracking-wider uppercase">Community</h3>
                         <ul class="mt-4 space-y-4">
-                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">API Documentation</a></li>
-                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Knowledge Base</a></li>
-                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Network Status</a></li>
+                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Discord</a></li>
+                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Facebook</a></li>
+                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Telegram</a></li>
                         </ul>
                     </div>
                     <div>
                         <h3 class="text-sm font-semibold text-gray-900 dark:text-white tracking-wider uppercase">Products &amp; Services</h3>
                         <ul class="mt-4 space-y-4">
                             <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Advertise</a></li>
-                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Explorer-as-a-Service</a></li>
+                            <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Adruino</a></li>
                             <li><a class="text-base text-gray-500 dark:text-gray-400 hover:text-primary" href="#">Developer APIs</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="mt-8 border-t border-gray-200 dark:border-gray-700 pt-8">
-                    <p class="text-base text-gray-400 xl:text-center">Blockchain Safe is a Block Explorer and Analytics Platform for the Future.</p>
+                    <p class="text-base text-gray-400 xl:text-center">Blockchain Safe is a Block Explorer and Analytics Platform for your money in Future.</p>
                 </div>
             </div>
         </footer>
